--- a/getting-started.html
+++ b/getting-started.html
@@ -91,8 +91,7 @@ information is provided below.</p>
 <col width="22%" />
 </colgroup>
 <thead valign="bottom">
-<tr class="tot">
-<th class="head">&nbsp;</th>
+<tr><th class="head">&nbsp;</th>
 <th class="head">Chrome</th>
 <th class="head">Firefox</th>
 <th class="head">Internet Explorer</th>
@@ -101,32 +100,28 @@ information is provided below.</p>
 </tr>
 </thead>
 <tbody valign="top">
-<tr class="tot">
-<td>Android</td>
+<tr><td>Android</td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="glyphicon glyphicon-remove"></span></td>
 <td><span class="text-muted">N/A</span></td>
 <td><span class="glyphicon glyphicon-remove"></span></td>
 <td><span class="text-muted">N/A</span></td>
 </tr>
-<tr class="tot">
-<td>iOS</td>
+<tr><td>iOS</td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="text-muted">N/A</span></td>
 <td><span class="text-muted">N/A</span></td>
 <td><span class="glyphicon glyphicon-remove"></span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 </tr>
-<tr class="tot">
-<td>Mac OS X</td>
+<tr><td>Mac OS X</td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="text-muted">N/A</span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 </tr>
-<tr class="tot">
-<td>Windows</td>
+<tr><td>Windows</td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
 <td><span class="glyphicon glyphicon-ok"></span></td>
